Modify manifest for Firefox

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -47,7 +47,7 @@
     }
   ],
   "background": {
-    "service_worker": "service_worker.js",
+    "scripts": ["service_worker.js"],
     "type": "module"
   },
   "options_ui": {
