--- a/public/manifest.json
+++ b/public/manifest.json
@@ -53,5 +53,11 @@
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{d6a76a34-0d7c-42af-938d-a4713cc1462d}",
+      "strict_min_version": "42.0"
+    }
   }
 }
